# zyheaps

./: .gitignore  CHANGELOG.md  README.md  android.hxml  build.hxml  haxelib.json  include.xml  run.n  vscode.hxml  vscodo.hxml  zyheaps.xml
docs/: Mac与Window的尺寸调整.md  Spine.md  UI自动构造.md  XML布局.md  readmd.md  readme.md  图片.md  场景管理.md  基础布局.md  按钮.md  文件选择器.md  文本.md  线程使用.md  网络请求.md  资源管理器.md
example/: android.hxml  html5.hxml  readme.md  wechat.hxml  zyheaps.2hxml  zyheaps.xml
example/Assets/: FetterDescAtlas.xml  XmlScene.xml  cude.fbx  data.json  monkey.fbx  slk.atlas  slk.json  spineboy.atlas  test.xml  test1.atlas  test1.json
example/Assets/.tmp/: Model.hmd  rw_huocai_01_walk.hmd
example/Export/.hxml/: target.hxml
example/src/: AutoXMLScene.hx  BatchScene.hx  InputScene.hx  ListViewScene.hx  Main.hx  MainScene.hx  Object3DScene.hx  PageScene.hx  SpineScene.hx  World.hx  XMLScene.hx
example/src/macro/: ShaderTest.hx
null/html5/: index.html
platform/android/app/: build.gradle
platform/html5/: index.html
res/: dj_wenzi_fly.FBX  rw_huocai_01.FBX  rw_huocai_01_walk.FBX
res/.tmp/: BOYMA_RUN.hmd  dj_wenzi_fly.hmd  dj_wenzi_fly01.hmd  hashes.json  rw_huocai_01.hmd  rw_huocai_01_walk.hmd
src/zygame/core/: Start.hx
src/zygame/core/platform/: JsStart.hx
src/zygame/display/: BaseTextInput.hx  Box.hx  Button.hx  DefalutItemRenderer.hx  DownListView.hx  FPSDebug.hx  Flow.hx  Graphics.hx  HBox.hx  HDividedBox.hx  Image.hx  ImageBitmap.hx  ItemRenderer.hx  Label.hx  ListView.hx  LoaderXMLScene.hx  Progress.hx  Quad.hx  Scene.hx  SceneBatch.hx  Scroll.hx  ScrollView.hx  Spine.hx  TextInput.hx  VBox.hx  VDividedBox.hx
src/zygame/display/base/: BaseDividedBox.hx  BaseGraphics.hx  DragDividedRenderer.hx  IBatchDisplayObject.hx  IDisplayObject.hx  IEventListener.hx  IInteractiveObject.hx  IItemRenderer.hx  IListView.hx  IObject.hx  IRefresher.hx
src/zygame/display/batch/: BButton.hx  BImage.hx  BObject.hx
src/zygame/display/data/: ArrayCollection.hx  ButtonSkin.hx  ObjectRecycler.hx
src/zygame/events/: Event.hx  EventListener.hx  EventTools.hx  EventType.hx
src/zygame/layout/: DividedHorizontalLayout.hx  DividedVerticalLayout.hx  FlowLayout.hx  FlowListLayout.hx  HorizontalLayout.hx  HorizontalListLayout.hx  ILayout.hx  Layout.hx  ListLayout.hx  VLayout.hx  VerticalLayout.hx  VerticalListLayout.hx  VirualFlowListLayout.hx  VirualHorizontalListLayout.hx  VirualVerticalListLayout.hx
src/zygame/loader/: LoaderAssets.hx
src/zygame/loader/parser/: AssetsType.hx  AtlasParser.hx  BaseParser.hx  BitmapDataParser.hx  BytesDataParser.hx  HMDParser.hx  JSONDataParser.hx  SoundParser.hx  SpineAtlasParser.hx  XMLDataParser.hx
src/zygame/macro/: AssetsProject.hx  AutoXMLBuilder.hx  Uninline.hx
src/zygame/net/: HttpRequest.hx
src/zygame/res/: AssetsBuilder.hx  Builder.hx  FontBuilder.hx  SpineTextureAtlas.hx  XMLAtlas.hx  XMLBuilder.hx
src/zygame/skins/: BaseSkin.hx  RectangleSkin.hx  SkinsBuilder.hx
src/zygame/utils/: Assets.hx  AssetsUtils.hx  CEFloat.hx  FileDialog.hx  FpsUtils.hx  FrameEngine.hx  IteratorUtils.hx  LayoutTools.hx  Lib.hx  MaxRectsBinPack.hx  Rectangle.hx  ScaleUtils.hx  SceneManager.hx  StringUtils.hx  TimeRuntime.hx
src/zygame/utils/hl/: AssetsTools.hx  BytesLoader.hx  ILoader.hx  IOSTools.hx  Log.hx  NativeTools.hx  Thread.hx
test/: AnimateTest.hx  GraphicsTest.hx  ImageTest.hx  LabelTest.hx  MainTest.hx  Test3DMain.hx  VSCodeMain.hx
tools/: build.hxml
tools/executable/mac-executable/: Main.hx  build.hxml
tools/hdll/glyphme/: build.hxml  glyphme.hdll
tools/hdll/glyphme/stb/: glyphme.cpp
tools/hdll/ios/: iosheaps.mm
tools/hdll/mac/: build.hxml  iostools.hdll  macheaps.mm
tools/hdll/mactools/: build.hxml  macheaps.mm
tools/hdll/wintools/: build.hxml  win.c
tools/src/: Tools.hx
tools/src/lime/tools/: AssetHelper.hx  AssetManifest.hx  AssetType.hx  FlashHelper.hx  ProjectHelper.hx  ProjectXMLParser.hx
tools/src/platform/: AllPlatform.hx  Android.hx  BasePlatform.hx  Html5.hx  Ios.hx  Mac.hx  Wechat.hx  Window.hx
tools/src/project/: ProjectHXMLParser.hx
tools/src/utils/: AssetHelperExt.hx  FixHashLinkNative.hx
tools/templates/android/: .gitignore  local.properties
tools/templates/android-cpp-libs/: readme.md
tools/templates/android/app/: build.gradle
tools/templates/android/app/src/main/cpp/: CMakeLists.txt  jni.c
tools/templates/html5/: index.html
tools/templates/ios/: Info.plist  Makefile  README.md  base.hxml
tools/templates/ios/App.xcodeproj/: project.pbxproj
tools/templates/ios/Configuration/: Config.xcconfig  Pathes.xcconfig
tools/templates/ios/native/: iosheaps.mm
tools/templates/ios/shims/: efx.c
tools/templates/project/: zyheaps.xml
tools/templates/wechat/: game.js  game.json  index.js  project.config.json  zygameui-dom.js
tools/templates/window/: main.c
tools/templates/window-old/: main.c
(+80 files in other folders)
